--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.0.1'
     implementation 'com.google.firebase:firebase-storage:16.0.1'
     implementation 'com.github.f0ris.sweetalert:library:1.5.1'
+    implementation 'com.cardiomood.android:android-widgets:0.1.1'
+    implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
 
 
     implementation 'com.github.john990:WaveView:v0.9'
